# dfnhack7

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  run_local.sh  tsconfig.json  webpack.config.js
host/: Cargo.toml
host/src/: main.rs
ic/: Cargo.toml  package-lock.json  package.json  webpack.config.js
ic/html/: index.html  index.js
ic/src/: assets.rs
src/common/: Cargo.toml
src/common/src/: lib.rs
src/declarations/ic/: ic.did  ic.did.d.ts  ic.did.js  index.js
src/frontend/src/: App.jsx  index.html  index.js  index.jsx
src/frontend/src/components/: ActorProvider.jsx  LoginNotice.jsx  Search.jsx  SearchResults.jsx  Upload.jsx
src/ic/: .gitignore  Cargo.toml  can.did  makefile
src/ic/src/: assets.rs  lib.rs  rc_bytes.rs
src/tls/: Cargo.toml  icp-price-http-get.txt
src/tls/src/: codec.rs  keyexchange.rs  lib.rs  messages.rs  open.rs  prf.rs  random.rs  seal.rs  tlsconnection.rs  transcript.rs  utils.rs
