[package]
name = "dfnhack7_host"
version = "0.1.0"
authors = ["John Plevyak <jplevyak@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
candid = "0.6.21"
delay = "0.3.1"
dotenv = "0.15"
futures = "0.3"
gflags = "0.3.7"
hyper = { version = "0.14", features = ["server"] }
ic-agent = "0.4.1"
ic-cdk = "0.2.4"
ic-cdk-macros = "0.2"
ic-types = "0.1.2"
dfnhack7_common = { path = "../common" }
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.4"
rust-embed = "5.6"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.7"
